# xzpv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.toml  install.sh  todo.txt  xz-prog.1  xz-prog.sh
.github/workflows/: branch-enforcement.yml  branch-protection.yml  quality-control.yml  release.yml  sync-back.yml
include/xzpv/: config.h  context.h  files.h  operations.h  output.h
packaging/debian/: changelog  control  postinst  postrm  rules
packaging/homebrew/: xzpv.rb
src/: config.c  context.c  files.c  operations.c  output.c  xzpv.c
tests/: test_suite.c
